fixed button mobile bug

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,16 @@ h3 {
     margin-top: 3em;
 }
 
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+  -webkit-appearance: none;
+  border-radius: 0.5em;
+}
+
 input {
     padding: 1.2em;
 }
